# icon_position

./: CMakeLists.txt  README.md  config.yaml  demo.cpp  icon_position.hpp  icon_position_sdk.cpp  icon_position_sdk.h  icon_position_template.cpp  icon_position_template.hpp  target_position.hpp  target_position_sdk.cpp  target_position_template.cpp  target_position_template.hpp  train.cpp
common/: cout_log.h
common/spdlog/fmt/bundled/: format.h
sdk_interface/: CMakeLists.txt  target_position_sdk.cpp  target_position_sdk.h
src/: CMakeLists.txt  target_position.hpp  target_position_template.cpp  target_position_template.hpp
src/ocr_paddle/: CMakeLists.txt  target_position_ocrpp.cpp  target_position_ocrpp.hpp
src/ocr_paddle/include/: args.h
src/ocr_paddle/src/: args.cpp  main.cpp  ocr_rec.cpp  paddleocr.cpp  paddlestructure.cpp  utility.cpp
src/template_opencv/: CMakeLists.txt  target_position_template.cpp  target_position_template.hpp
